@startuml

title __MAPA's Class Diagram__\n

  namespace sk.uniza.fri {
    namespace mapa {
      enum DruhKocky {
        NEZBURATELNA
        PADAJUCA
        SPREDMETOM
        ZBURATELNA
        reprezentacia
      }
    }
  }
  

  namespace sk.uniza.fri {
    namespace mapa {
      class sk.uniza.fri.mapa.Kocka {
          + Kocka()
          + getDruh()
          + getPredmet()
          + padaniePlosiny()
          + posunKocku()
      }
    }
  }
  

  namespace sk.uniza.fri {
    namespace mapa {
      class sk.uniza.fri.mapa.MapaZoSuboru {
          - kocky : LinkedList<Kocka>
          - predmety : ArrayList<Predmet>
          - riadky : ArrayList<Riadok>
          - zvierata : ArrayList<Zviera>
          + MapaZoSuboru()
          + getPoslednaKocka()
          + getPredmety()
          + getVelkostPredmetov()
          + getVelkostZverov()
          + getZviera()
          + jeNaXY()
          + jePosledna()
          + jePrva()
          + nacitanie()
          + odstranPredmet()
          + odstranZviera()
          + odstranZvieraZKocky()
          + posun()
          + stojiNaPlosine()
          + vykresli()
          + zburanieKocky()
          + zburanieSiskou()
          - nacitajKocky()
          - nacitajPredmety()
          - nacitajZvierata()
          - najdiIndexOf()
          - ulozenieKociek()
      }
    }
  }
  

  sk.uniza.fri.mapa.Kocka -up-|> sk.uniza.fri.ZakladnaTrieda
  sk.uniza.fri.mapa.Kocka o-- sk.uniza.fri.mapa.DruhKocky : druh
  sk.uniza.fri.mapa.Kocka o-- sk.uniza.fri.predmety.Predmet : predmet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
